syntax = "proto3";

option csharp_namespace = "WagonService.Server";

   message WagonRequest {
       string start_time = 1;
       string end_time = 2;
   }

   message Wagon {
       string inventory_number = 1;
       string arrival_time = 2;
       string departure_time = 3;
   }

   message WagonResponse {
       repeated Wagon wagons = 1;
   }

   service WagonService {
       rpc GetWagons(WagonRequest) returns (WagonResponse);
   }